--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,76 @@
     outline: 0;
     box-sizing: border-box;
 }
+.container{
+    width: 100%;
+}
+.row{
+    display: flex;
+    flex-wrap: wrap;
+}
+a{
+    text-decoration: none;
+}
+ul{
+    list-style: none;
+}
+
+/*header start*/
+#header{
+    width: 100%;
+    top: 0;
+    left: 0;
+    position: fixed;
+    margin: 20px 20px;
+    font-weight: bold;
+    border-bottom: 1px solid #fff;
+}
+#header .logo{
+    text-align: center;
+    width: 30%;
+}
+#header .logo a{
+    font-size: 22px;
+    color: aliceblue;
+    padding: 20px 20px;
+}
+#header .main_menu{
+    width: 70%;
+}
+#header .main_menu ul{
+    text-align: center;
+    text-transform: capitalize;
+}
+#header .main_menu ul li{
+    display: inline-block;
+}
+#header .main_menu ul li a{
+    font-size: 15px;
+    color: aliceblue;
+    padding: 20px 20px;
+}
+/*header end*/
+
+/*banner start*/
+#banner{
+    width: 100%;
+    height: 100vh;
+    background: url(../img/home.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    top: 0;
+    left: 0;
+}
+#banner .banner_content{
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+}
+/*banner end*/
